 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-3281] fixed system.cpu.util[] for all processors combined on NetBSD (asaveljevs)
 - [ZBX-3006] fixed some forms <input> elements are put inside <table> tag (Vedmak)
 - [ZBXNEXT-176] added zabbix server name input during setup (Vedmak)
 - [ZBX-3253] added schema selection for db2 setup and a configuration file parameter on the server (asaveljevs,Vedmak)
 - [ZBX-3239] fixed error in Proxies screen on Oracle, when no proxy defined (Vedmak)
 - [ZBX-3273] removed renewed auto registration notifications for already created hosts (Sasha)
 - [ZBX-1294] disabled "Add" and "Toggle input method" for templated trigger expressions (KB)
 - [ZBX-3223] it is now possible to gather network interface statistics under a normal user on OpenBSD; thanks to Robert Nagy (asaveljevs,Sasha)
 - [ZBX-3270] fixed server crash when processing calculated items with non-numeric user macros (asaveljevs)
 - [ZBXNEXT-564] added new {PROXY.NAME} and {HOSTNAME} macros for auto registration notifications (Sasha)
 - [ZBXNEXT-564] added support of {PROXY.NAME} macro for discovery and trigger notifications (Sasha)
 - [ZBX-3269] fixed processing of vfs.dev.read/write metrics for devices with trailing digits (Sasha)
 - [ZBX-3115] fixed returned data type for net.tcp.listen under Solaris and FreeBSD (Sasha)
 - [ZBX-3115] fixed returned data type for system.users.num metric (Sasha)
 - [ZBX-3267] fixed trigger updating through API (Aly)
 - [ZBX-3259] fixed log trigger wizard functionality: now it can be used for any item with value type = log, text or char (KB)